--- a/css/custom.css
+++ b/css/custom.css
@@ -1,15 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
+@import url('https://fonts.googleapis.com/css?family=Rubik:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "Rubik Bold", sans-serif;
 }
 html {
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
-  scroll-snap-points-y: repeat(100vh);
+  /* scroll-snap-points-y: repeat(100vh); */
   scrollbar-width: auto;
   scrollbar-color: rgb(143, 143, 143) rgb(0, 0, 0);
 }
@@ -36,15 +37,41 @@ html {
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  margin: 10vh 50px;
   color: rgba(255, 255, 255, 0.90);;
 }
 .header h1{
   padding: 20px 20px;
-  font-size: 3em;
+  font-size: 2.5em;
   font-weight: 900;
   text-align: center;
+  margin: 20px;
   line-height: 1;
+}
+.header.section-0 {
+  flex-direction: column;
+}
+.header.section-0 h1{
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: rgba(64, 64, 64, 0.5);
+  border-radius: 12px;
+  align-self: center;
+  line-height: 2;
+  /* text-shadow: 0px 0px 50px black; */
+  opacity: 0;
+  animation: animate 2s linear forwards;
+  animation-delay: 5s;
+}
+@keyframes animate {
+  0% {
+      opacity: 0%;
+  }
+  /* 50% {
+      opacity: 50%;
+  } */
+  100% {
+    opacity: 100%;
+  }
 }
 .album{
   position: relative;
@@ -96,8 +123,8 @@ html {
   padding-bottom: 10px;
 }
 .album .image-container .info p{
-  font-size: 1em;
-  font-weight: 400;
+  font-size: 1.1em;
+  font-weight: 500;
 }
 .navigation{
   position: absolute;
@@ -177,11 +204,15 @@ html {
 } */
 
 @media (max-width: 500px){
+  .header h1 {
+    font-size: clamp(1em, 8vw, 2.5em);
+  }
   .album {
     max-width: none;
     max-height: none;
     width: 100%;
     height: 70%;
+    margin: 10px;
   }
   .album .image-container .info {
     max-width: none;
@@ -192,7 +223,7 @@ html {
     font-size: clamp(0.8em, 4vw, 1.6em); 
   }
   .album .image-container .info p{
-    font-size: clamp(0.5rem, 3vw, 1em); 
+    font-size: clamp(0.5rem, 3vw, 1.1em); 
   }
 
 }
