--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
 @import url('https://fonts.googleapis.com/css?family=Rubik:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 *{
@@ -10,7 +9,6 @@
 html {
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
-  /* scroll-snap-points-y: repeat(100vh); */
   scrollbar-width: auto;
   scrollbar-color: rgb(143, 143, 143) rgb(0, 0, 0);
 }
@@ -37,7 +35,7 @@ html {
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  color: rgba(255, 255, 255, 0.90);;
+  color: rgba(255, 255, 255, 0.9);
 }
 .header h1{
   padding: 20px 20px;
@@ -49,29 +47,35 @@ html {
 }
 .header.section-0 {
   flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 .header.section-0 h1{
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: rgba(64, 64, 64, 0.5);
-  border-radius: 12px;
-  align-self: center;
-  line-height: 2;
-  /* text-shadow: 0px 0px 50px black; */
+  padding-top: 4px;
+  padding-bottom: 10px;
+  margin: 0px;
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(64, 64, 64, 1);
+  line-height: 1;
   opacity: 0;
-  animation: animate 2s linear forwards;
+}
+.header.section-0 h1:nth-child(1) {
+  border-radius: 0px 0px 10px 10px;
+  animation: animate 1s linear forwards;
   animation-delay: 5s;
 }
+.header.section-0 h1:nth-child(2) {
+  background-color: rgba(64, 64, 64, 0.5);
+  border-radius: 0px 0px 10px 10px;
+  font-size: 1.6em;
+  font-weight: 500;
+  padding: 5px 15px;
+  animation: animate 1s linear forwards;
+  animation-delay: 6s;
+}
 @keyframes animate {
-  0% {
-      opacity: 0%;
-  }
-  /* 50% {
-      opacity: 50%;
-  } */
-  100% {
-    opacity: 100%;
-  }
+  0% { opacity: 0%; }
+  100% { opacity: 100%; }
 }
 .album{
   position: relative;
@@ -192,21 +196,12 @@ html {
   box-shadow: 0px 0px 10px rgba(4, 195, 141, 0.75);
 }
 
-/* @media (max-width: 900px){
-  .album{
-    width: 100%;
-  }
-  .album .image-container .info{
-    position: relative;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-} */
-
 @media (max-width: 500px){
+
   .header h1 {
-    font-size: clamp(1em, 8vw, 2.5em);
+    font-size: clamp(1em, 8vw, 2em);
+    padding: 20px 20px;
+    margin: 0px;    
   }
   .album {
     max-width: none;
@@ -228,5 +223,4 @@ html {
   .album .image-container .info p{
     font-size: clamp(0.5rem, 3vw, 1.1em); 
   }
-
 }
