--- a/css/custom.css
+++ b/css/custom.css
@@ -43,6 +43,9 @@ html {
   font-weight: 900;
   text-align: center;
   margin: 20px;
+  text-decoration-line: underline;
+  text-decoration-color: rgb(4 195 142 / 0.75);
+  text-decoration-thickness: 4px;
   line-height: 1;
 }
 .header.section-0 {
@@ -56,6 +59,7 @@ html {
   margin: 0px;
   color: rgba(255, 255, 255, 1);
   background-color: rgba(64, 64, 64, 1);
+  text-decoration-line: none;
   line-height: 1;
   opacity: 0;
 }
