--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=Rubik:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Rubik:wght@500;800;&display=swap');
+:root{
+  --color-light: 255, 255, 255;
+  --color-dark: 0, 0, 0;
+  --color-accent: 4, 195, 142;
+  --font-size-big: 2.5rem;
+  --font-size-med: 1.6rem;
+  --font-size-sma: 1.1rem;
+  --font-weight-heavy: 800;
+  --font-weight-light: 500;
+}
 *{
   margin: 0;
   padding: 0;
@@ -34,18 +43,17 @@ html {
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  color: rgba(255, 255, 255, 0.9);
 }
 .header h1{
-  padding: 20px 20px;
-  font-size: 2.5em;
-  font-weight: 900;
+  padding: 1.5rem;
   text-align: center;
-  margin: 20px;
-  text-decoration-line: underline;
-  text-decoration-color: rgb(4 195 142 / 0.75);
-  text-decoration-thickness: 4px;
+  color: rgba(var(--color-light), 0.85);
+  font-size: var(--font-size-big);
+  font-weight: var(--font-weight-heavy);
   line-height: 1;
+  text-decoration-line: underline;
+  text-decoration-color: rgba(var(--color-accent), 0.85);
+  text-decoration-thickness: 4px;
 }
 .header.section-0 {
   flex-direction: column;
@@ -53,45 +61,38 @@ html {
   justify-content: flex-start;
 }
 .header.section-0 h1{
-  padding-top: 4px;
-  padding-bottom: 10px;
-  margin: 0px;
-  color: rgba(255, 255, 255, 1);
-  background-color: rgba(64, 64, 64, 1);
+  padding: 0 0.4em 0.2em 0.4em;
+  color: rgba(var(--color-light), 0.85);
+  background-color: rgba(var(--color-dark), 0.6);
+  border-radius: 0px 0px 8px 8px;
   text-decoration-line: none;
-  line-height: 1;
-  opacity: 0;
+  opacity: 1;
+  animation: animateHeader 1s linear forwards;
 }
 .header.section-0 h1:nth-child(1) {
-  border-radius: 0px 0px 10px 10px;
-  animation: animate 1s linear forwards;
-  animation-delay: 5s;
+  animation-delay: 4s;
 }
 .header.section-0 h1:nth-child(2) {
-  background-color: rgba(64, 64, 64, 0.5);
-  border-radius: 0px 0px 10px 10px;
-  font-size: 1.6em;
-  font-weight: 500;
-  padding: 5px 15px;
-  animation: animate 1s linear forwards;
-  animation-delay: 6s;
+  padding-top: 0.2em;
+  background-color: rgba(var(--color-dark), 0.3);
+  font-size: var(--font-size-med);
+  font-weight: var(--font-weight-light);
+  animation-delay: 5s;
 }
-@keyframes animate {
+@keyframes animateHeader {
   0% { opacity: 0%; }
   100% { opacity: 100%; }
 }
 .album{
   position: relative;
-  background: #000116;
-  width: 100%;
-  max-width: 1200px;
-  height: 100%;
-  max-height: 700px;
-  margin: 50px;
-  overflow: hidden;
-  border-radius: 12px;
   display: flex;
-  scroll-snap-type: y mandatory;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  max-width: 1200px;
+  max-height: 700px;
+  margin: 1rem;
+  border-radius: 8px;
 }
 .album .image-container{
   position: absolute;
@@ -100,8 +101,8 @@ html {
   clip-path: circle(0% at 0 50%);
 }
 .album .image-container.active{
-  clip-path: circle(150% at 0 50%);
-  transition: 0.3s;
+  clip-path: circle(70.5% at 50% 50%);
+  transition: 0.4s;
 }
 .album .image-container img{
   position: absolute;
@@ -114,124 +115,122 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 25px;
-  width: 50px;
+  height: 24px;
+  width: 48px;
+  right: 0.4em;
+  top: 0.4em;
   border-radius: 8px;
-  right: 10px;
-  top: 10px;
-  padding: 5px 15px;
-  font-size: 1em;
-  font-weight: 800;
-  color: rgba(255, 255, 255, 0.7);
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(var(--color-dark), 0.4);
+  color: rgba(var(--color-light), 0.6);
+  font-size: var(--font-size-sma);
+  font-weight: var(--font-weight-heavy);
 }
 .album .image-container .info{
   position: absolute;
   color: #222;
-  background: rgba(255, 255, 255, 0.90);
-  max-width: 75%;
-  margin-top: 40px;
-  margin-left: 40px;
-  padding: 20px;
-  border: #000116 solid 1px;
-  border-radius: 5px;
-  box-shadow: 5px 5px 5px rgb(1 1 1 / 25%);
-  backdrop-filter: blur(6px);
+  background: rgba(var(--color-light), 0.9);
+  box-shadow: 5px 5px 5px rgba(var(--color-dark), 0.2);
+  border: rgba(var(--color-dark), 1) solid 0.5px;
+  border-radius: 8px;
+  max-width: 70%;
+  margin-top: 1rem;
+  margin-left: 1rem;
+  padding: 1em;
   opacity: 0;
-  transition: opacity 0.5s ease;
+  backdrop-filter: blur(6px);
+  transition: opacity 0.4s ease;
 }
 .album .image-container .info h2{
-  font-size: 1.6em;
-  font-weight: 800;
-  padding-bottom: 10px;
+  font-size: var(--font-size-med);
+  font-weight: var(--font-weight-heavy);
+  padding-bottom: 0.4em;
 }
 .album .image-container .info p{
-  font-size: 1.1em;
-  font-weight: 500;
-  letter-spacing: 0.05em;
+  font-size: var(--font-size-sma);
+  font-weight: var(--font-weight-light);
+  letter-spacing: 0.03em;
 }
 .navigation{
   position: absolute;
-  width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
+  height: 100%;
   opacity: 0;
   transition: opacity 0.5s ease;
 }
-.album:hover .navigation{
+.album:hover .navigation, .album:hover .info{
   opacity: 1;
 }
-.album:hover .info{
+/* .album:hover .info{
   opacity: 1;
-}
+} */
 .prev-btn, .next-btn{
   z-index: 999;
-  font-size: 2em;
-  color: rgb(1 1 1 / 100%);
-	background: rgba(255, 255, 255, 0.90);
-  padding: 6px;
+  padding: 0.2em;
+  color: rgba(var(--color-dark), 1);
+	background: rgba(var(--color-light), 0.9);
+  box-shadow: 4px 4px 4px rgba(var(--color-dark), 0.2);
+  font-size: var(--font-size-med);
   cursor: pointer;
-  box-shadow: 0px 5px 5px rgb(1 1 1 / 25%);
 }
 .prev-btn{
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-  padding-right: 10px;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  padding-right: 0.4em;
 }
 .next-btn{
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-  padding-left: 10px;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  padding-left: 0.4em;
 }
 .prev-btn:hover, .next-btn:hover {
-  color: rgb(4 195 142 / 100%);
+  color: rgba(var(--color-accent), 1);
 }
 .prev-btn:active, .next-btn:active {
-  color: rgb(1 1 1 / 100%);
-  background: rgb(4 195 142 / 100%);
+  color: rgba(var(--color-light), 1);
+  background: rgba(var(--color-accent), 1);
 }
 .navigation-icon-container{
-  position: absolute;
+  position: relative;
   width: 100%;
   z-index: 999;
   display: flex;
   justify-content: center;
   align-self: flex-end;
-  padding: 20px 0;
+  margin: 1rem;
 }
 .navigation-icon-container .navigation-icon{
   z-index: 999;
-  background: rgba(255, 255, 255, 0.6);
-  width: 10px;
-  height: 10px;
-  transform: translateY(0px);
-  margin: 0 5px;
-  border-radius: 2.5px;
+  background: rgba(var(--color-light), 0.7);
+  width: 8px;
+  height: 8px;
+  margin: 0 0.4rem;
+  border-radius: 2px;
+  /* transform: translateY(0px); */
 }
 .navigation-icon-container .navigation-icon.active{
-  background: rgb(4 195 142 / 100%);
-  box-shadow: 0px 0px 10px rgba(4, 195, 141, 0.75);
+  background: rgba(var(--color-accent), 1);
+  box-shadow: 0px 0px 6px rgba(var(--color-accent), 1);
 }
 
 @media (max-width: 500px){
 
   .header h1 {
-    font-size: clamp(1em, 8vw, 2em);
-    padding: 20px 20px;
+    font-size: clamp(1rem, 8vw, 2rem);
+    padding: 1em 1em;
     margin: 0px;    
   }
   .album {
     max-width: none;
     max-height: none;
     width: 100%;
-    height: 70%;
-    margin: 10px;
+    height: 75%;
   }
   .album .image-container .info {
-    max-width: none;
     width: 100%;
+    max-width: none;
     border-radius: 0;
     margin-top: 0;
     margin-left: 0;
@@ -240,6 +239,6 @@ html {
     font-size: clamp(0.8em, 4vw, 1.6em); 
   }
   .album .image-container .info p{
-    font-size: clamp(0.5rem, 3vw, 1.1em); 
+    font-size: clamp(0.5rem, 3vw, 1.2em); 
   }
 }
